# ConstructOS

./: .coverage  .dockerignore  .env  .replit  Dockerfile  README.md  azure-pipelines.yml  coverage.xml  docker-compose.yml  junit.xml  package-lock.json  package.json  pyproject.toml  pytest.ini  replit.md  requirements.txt  run_all_python_tests.sh  run_dev.sh  tailwind.config.ts
attached_assets/: Pasted--Customer-Relationship-Management-CRM-FeaturesThe-CRM-modules-focus-on-the-entire-customer-life-1764238169763_1764238169764.txt  Pasted--Product-Item-Entity-Schema-The-Inventory-Service-Master-The-Inventory-Service-part-of-the-ERP-is-1764240382004_1764240382006.txt  Pasted--The-technical-difference-between-group-chat-and-DM-in-Django-Channels-is-minimal-but-the-data-mode-1764256201145_1764256201149.txt  Pasted-Achieving-high-code-standards-for-security-and-production-readiness-in-your-ConstructOS-Python-Djang-1764260840900_1764260840901.txt  Pasted-Backend-Testing-with-Pytest-Python-Django-Use-pytest-as-the-primary-testing-framework-for-all-your--1764249480710_1764249480711.txt  Pasted-Building-a-complete-CRM-Customer-Relationship-Management-and-ERP-Enterprise-Resource-Planning-sy-1764235497680_1764235497681.txt  Pasted-Databases-Polyglot-Persistence-Principle-Each-microservice-should-own-its-own-database-to-ensure--1764235538609_1764235538609.txt  Pasted-Financial-Risk-Management-Finance-Contact-Services-These-models-focus-on-improving-cash-flow-a-1764245430557_1764245430559.txt  Pasted-For-developing-user-access-control-with-distinct-levels-like-Finance-HR-Operations-and-Site-Manag-1764242474228_1764242474230.txt  Pasted-For-high-level-testing-often-called-smoke-testing-or-system-integration-testing-and-for-use-in-a-l-1764240583775_1764240583776.txt  Pasted-Great-Let-s-drill-down-into-the-Customer-Account-data-schema-This-entity-is-the-single-most-import-1764240064671_1764240064674.txt  Pasted-Implementing-a-Slack-like-messaging-feature-in-your-ConstructOS-platform-requires-building-a-dedicat-1764252089301_1764252089301.txt  Pasted-Integrating-Power-BI-Reports-and-Dashboards-The-most-robust-way-to-integrate-Power-BI-visuals-direc-1764234573463_1764234573465.txt  (+14 more)
backend/: Dockerfile  __init__.py  (+5 more)
(+219 files in other folders)
