[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=46.0.3",
    "django>=5.2.8",
    "django-cors-headers>=4.9.0",
    "django-filter>=25.2",
    "djangorestframework>=3.16.1",
    "faker>=38.2.0",
    "gunicorn>=23.0.0",
    "msal>=1.34.0",
    "psycopg2-binary>=2.9.11",
    "pyjwt[crypto]>=2.10.1",
    "python-dotenv>=1.2.1",
    "whitenoise>=6.11.0",
]
